--- a/Pluto/Base.lproj/Main.storyboard
+++ b/Pluto/Base.lproj/Main.storyboard
@@ -7,9 +7,6 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
-        <array key="Lobster-Regular.ttf">
-            <string>Lobster-Regular</string>
-        </array>
         <array key="OpenSans-Bold.ttf">
             <string>OpenSans-Bold</string>
         </array>
@@ -49,11 +46,6 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pluto" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zMc-wZ-l4w">
-                                <fontDescription key="fontDescription" name="Lobster-Regular" family="Lobster" pointSize="100"/>
-                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9Mp-dD-rsT" customClass="TextField" customModule="Pluto" customModuleProvider="target">
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" name="OpenSans" family="Open Sans" pointSize="17"/>
@@ -158,6 +150,12 @@
                                     <constraint firstItem="lPD-FU-Jgv" firstAttribute="centerX" secondItem="6W6-3M-fuf" secondAttribute="centerX" id="vFJ-t9-oQX"/>
                                 </constraints>
                             </view>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="XGm-Xu-eye">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="240" id="1K0-tO-MVe"/>
+                                    <constraint firstAttribute="height" constant="128" id="j2K-wt-9E1"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.13333333333333333" green="0.13333333333333333" blue="0.13333333333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -168,12 +166,12 @@
                             <constraint firstAttribute="trailingMargin" secondItem="4kr-Lm-sgb" secondAttribute="trailing" constant="31" id="INX-NU-n5S"/>
                             <constraint firstItem="4kr-Lm-sgb" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="31" id="Nmx-F9-mko"/>
                             <constraint firstItem="6W6-3M-fuf" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="Yqi-Lf-KLs"/>
-                            <constraint firstItem="9Mp-dD-rsT" firstAttribute="top" secondItem="zMc-wZ-l4w" secondAttribute="bottom" constant="33" id="ePW-dd-VLh"/>
+                            <constraint firstItem="XGm-Xu-eye" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Zt1-OF-Ybp"/>
+                            <constraint firstItem="XGm-Xu-eye" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="100" id="f25-cW-N1P"/>
                             <constraint firstItem="9Mp-dD-rsT" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="fI6-0f-nMx"/>
-                            <constraint firstItem="zMc-wZ-l4w" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="100" id="gHE-A4-jfA"/>
-                            <constraint firstItem="zMc-wZ-l4w" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="haq-6b-l2W"/>
                             <constraint firstItem="9Mp-dD-rsT" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="31" id="nqj-37-2S2"/>
                             <constraint firstItem="4kr-Lm-sgb" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="pd7-2L-9zR"/>
+                            <constraint firstItem="9Mp-dD-rsT" firstAttribute="top" secondItem="XGm-Xu-eye" secondAttribute="bottom" constant="30" id="qTJ-22-HmF"/>
                             <constraint firstItem="6W6-3M-fuf" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="tNv-2s-fep"/>
                             <constraint firstItem="Cbu-mg-waj" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="yKC-QH-4Sn"/>
                         </constraints>
@@ -188,7 +186,6 @@
                         <outlet property="passwordField" destination="4kr-Lm-sgb" id="q0O-dq-1dV"/>
                         <outlet property="searchBar" destination="yda-k6-Zcn" id="1Kg-RC-asN"/>
                         <outlet property="searchPreview" destination="PXr-bC-h9j" id="fWF-Cf-IC6"/>
-                        <outlet property="titleLabel" destination="zMc-wZ-l4w" id="8Pq-Zp-xMd"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -393,7 +390,7 @@
                                                                 <constraint firstAttribute="width" constant="90" id="RLd-9R-Zbn"/>
                                                             </constraints>
                                                         </imageView>
-                                                        <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rocked-faded-tilted" translatesAutoresizingMaskIntoConstraints="NO" id="vMD-Nk-UsK">
+                                                        <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rocket-faded-tilted" translatesAutoresizingMaskIntoConstraints="NO" id="vMD-Nk-UsK">
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="43" id="Uzh-dZ-BZi"/>
                                                                 <constraint firstAttribute="height" constant="43" id="r0B-HM-0lQ"/>
@@ -435,7 +432,7 @@
                                                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_access_time_white" translatesAutoresizingMaskIntoConstraints="NO" id="ZLb-M7-PgR">
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="clock" translatesAutoresizingMaskIntoConstraints="NO" id="ZLb-M7-PgR">
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="10" id="OKN-oh-nBd"/>
                                                                 <constraint firstAttribute="width" constant="10" id="bZE-QL-fj8"/>
@@ -1023,7 +1020,7 @@
                                                                 <constraint firstAttribute="width" constant="90" id="ZoZ-DC-s9s"/>
                                                             </constraints>
                                                         </imageView>
-                                                        <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rocked-faded-tilted" translatesAutoresizingMaskIntoConstraints="NO" id="emC-o9-2w9">
+                                                        <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rocket-faded-tilted" translatesAutoresizingMaskIntoConstraints="NO" id="emC-o9-2w9">
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="43" id="7cy-ah-mrA"/>
                                                                 <constraint firstAttribute="width" constant="43" id="VZz-1o-bkN"/>
@@ -1287,7 +1284,7 @@
                                                                 <constraint firstAttribute="width" constant="90" id="dew-4P-FtY"/>
                                                             </constraints>
                                                         </imageView>
-                                                        <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rocked-faded-tilted" translatesAutoresizingMaskIntoConstraints="NO" id="a35-Zt-rp7">
+                                                        <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rocket-faded-tilted" translatesAutoresizingMaskIntoConstraints="NO" id="a35-Zt-rp7">
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="43" id="BPp-EE-BA0"/>
                                                                 <constraint firstAttribute="height" constant="43" id="R9Q-PB-a2L"/>
@@ -1329,7 +1326,7 @@
                                                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="7D4E97D1-A295-4D16-ACCA-2D8C3695CEAD" translatesAutoresizingMaskIntoConstraints="NO" id="5Tb-uo-tgx">
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="3257AB6C-4E2F-4C02-80D4-87A62A493B78" translatesAutoresizingMaskIntoConstraints="NO" id="5Tb-uo-tgx">
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="10" id="8aR-cr-Z5k"/>
                                                                 <constraint firstAttribute="height" constant="10" id="w9X-hi-BcQ"/>
@@ -1405,7 +1402,7 @@
                             <constraint firstAttribute="trailing" secondItem="b33-1k-2oO" secondAttribute="trailing" id="vu2-Oc-eRj"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" tag="3" title="" image="C6C7D837-9B82-4512-BE0E-4CACAF4A666D" selectedImage="C6C7D837-9B82-4512-BE0E-4CACAF4A666D" id="gLx-o3-RUD"/>
+                    <tabBarItem key="tabBarItem" tag="3" title="" image="81DA51A7-808C-4C8C-8930-D49058CA19B4" selectedImage="81DA51A7-808C-4C8C-8930-D49058CA19B4" id="gLx-o3-RUD"/>
                     <connections>
                         <outlet property="addBuddyButton" destination="iJF-ke-fPH" id="UJK-eK-Mdq"/>
                         <outlet property="eventView" destination="0ev-9f-cTQ" id="Rbv-nQ-gTu"/>
@@ -1420,7 +1417,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="7D4E97D1-A295-4D16-ACCA-2D8C3695CEAD" width="24" height="24">
+        <image name="3257AB6C-4E2F-4C02-80D4-87A62A493B78" width="24" height="24">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPT5YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQrLjE3OlUkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
@@ -1510,7 +1507,7 @@ EvIS+hMHEwwTDhMQExUTHRMgEyUTLRMwE0ITRRNKAAAAAAAAAgEAAAAAAAAAQQAAAAAAAAAAAAAAAAAA
 E0w
 </mutableData>
         </image>
-        <image name="C6C7D837-9B82-4512-BE0E-4CACAF4A666D" width="24" height="24">
+        <image name="81DA51A7-808C-4C8C-8930-D49058CA19B4" width="24" height="24">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPT5YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQrLjE3OlUkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
@@ -1607,7 +1604,8 @@ E0w
         <image name="ic_access_time_white" width="24" height="24"/>
         <image name="ic_exit_to_app_white" width="24" height="24"/>
         <image name="location" width="24" height="24"/>
-        <image name="rocked-faded-tilted" width="18" height="18"/>
+        <image name="logo" width="2000" height="1000"/>
+        <image name="rocket-faded-tilted" width="18" height="18"/>
         <image name="settings" width="18" height="18"/>
         <image name="user" width="18" height="18"/>
     </resources>
