--- a/Pluto/Base.lproj/Main.storyboard
+++ b/Pluto/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -155,7 +155,7 @@
                                         <rect key="frame" x="0.0" y="28" width="281" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="IOX-j6-sev" id="dvN-Gc-nqm">
-                                            <frame key="frameInset" width="281" height="43"/>
+                                            <frame key="frameInset" width="281" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.0" colorSpace="calibratedRGB"/>
@@ -553,7 +553,7 @@
                                         <rect key="frame" x="0.0" y="28" width="281" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="nWV-pH-yME" id="yGD-Yt-7Qs">
-                                            <frame key="frameInset" width="281" height="43"/>
+                                            <frame key="frameInset" width="281" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <color key="backgroundColor" red="0.16078431372549018" green="0.16078431372549018" blue="0.16078431372549018" alpha="1" colorSpace="calibratedRGB"/>
                                         </tableViewCellContentView>
@@ -905,7 +905,7 @@
                 <navigationController storyboardIdentifier="Main" id="udA-i2-i6d" sceneMemberID="viewController">
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="375" height="667"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="QWN-15-QzX">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" translucent="NO" id="QWN-15-QzX">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="barTintColor" red="0.16078431372549018" green="0.16078431372549018" blue="0.16078431372549018" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -1473,7 +1473,7 @@
                             <constraint firstAttribute="trailing" secondItem="b33-1k-2oO" secondAttribute="trailing" id="vu2-Oc-eRj"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" tag="3" title="" image="7F50E940-76DA-40FB-94D5-CB74A7D3DF05" selectedImage="7F50E940-76DA-40FB-94D5-CB74A7D3DF05" id="gLx-o3-RUD"/>
+                    <tabBarItem key="tabBarItem" tag="3" title="" image="05FB954E-3FA2-43EE-810C-994B9225F792" selectedImage="05FB954E-3FA2-43EE-810C-994B9225F792" id="gLx-o3-RUD"/>
                     <connections>
                         <outlet property="addBuddyButton" destination="iJF-ke-fPH" id="UJK-eK-Mdq"/>
                         <outlet property="eventView" destination="0ev-9f-cTQ" id="Rbv-nQ-gTu"/>
@@ -1490,7 +1490,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="7F50E940-76DA-40FB-94D5-CB74A7D3DF05" width="24" height="24">
+        <image name="05FB954E-3FA2-43EE-810C-994B9225F792" width="24" height="24">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPT5YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQrLjE3OlUkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
