--- a/Pluto/Base.lproj/Main.storyboard
+++ b/Pluto/Base.lproj/Main.storyboard
@@ -219,10 +219,104 @@
                     <view key="view" contentMode="scaleToFill" id="5wt-kM-waT">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ghE-Jn-I8h" customClass="RoundImageView" customModule="Pluto" customModuleProvider="target">
+                                <gestureRecognizers/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="80" id="4Xh-vC-Am5"/>
+                                    <constraint firstAttribute="height" constant="80" id="fUC-dv-zqQ"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="focusOnFaces" value="YES"/>
+                                </userDefinedRuntimeAttributes>
+                            </imageView>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vwf-8Z-BWg" customClass="HoshiTextField" customModule="Pluto" customModuleProvider="target">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="3PD-sV-7lw"/>
+                                </constraints>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="18"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="borderInactiveColor">
+                                        <color key="value" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="borderActiveColor">
+                                        <color key="value" red="1" green="0.82352941180000006" blue="0.35294117650000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="placeholderColor">
+                                        <color key="value" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="placeholderFontScale">
+                                        <real key="value" value="1"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aRM-zD-bGR" customClass="HoshiTextField" customModule="Pluto" customModuleProvider="target">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="vLY-fP-vmA"/>
+                                </constraints>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="18"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="borderInactiveColor">
+                                        <color key="value" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="borderActiveColor">
+                                        <color key="value" red="1" green="0.82352941180000006" blue="0.35294117650000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="placeholderColor">
+                                        <color key="value" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="placeholderFontScale">
+                                        <real key="value" value="1"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="t41-ty-hZi" customClass="Button" customModule="Pluto" customModuleProvider="target">
+                                <color key="backgroundColor" red="1" green="0.82352941180000006" blue="0.35294117650000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="7Oe-io-wbS"/>
+                                    <constraint firstAttribute="height" constant="50" id="IS8-fV-uvU"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Lato-Bold" family="Lato" pointSize="17"/>
+                                <state key="normal" title="SAVE">
+                                    <color key="titleColor" red="0.16078431369999999" green="0.16078431369999999" blue="0.16078431369999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="20"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="goButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="fz6-70-dZX"/>
+                                    <action selector="saveButtonAction:" destination="Wo1-Cp-7sE" eventType="touchUpInside" id="hfI-cy-ykl"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="0.13333333333333333" green="0.13333333333333333" blue="0.13333333333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="ghE-Jn-I8h" firstAttribute="top" secondItem="0YB-QX-6MW" secondAttribute="bottom" constant="10" id="0C8-Uq-hlD"/>
+                            <constraint firstItem="vwf-8Z-BWg" firstAttribute="leading" secondItem="5wt-kM-waT" secondAttribute="leadingMargin" id="0uT-rk-Sbq"/>
+                            <constraint firstItem="vwf-8Z-BWg" firstAttribute="trailing" secondItem="5wt-kM-waT" secondAttribute="trailingMargin" id="GiX-KJ-1QY"/>
+                            <constraint firstItem="aRM-zD-bGR" firstAttribute="trailing" secondItem="5wt-kM-waT" secondAttribute="trailingMargin" id="Mhu-yg-EVX"/>
+                            <constraint firstItem="t41-ty-hZi" firstAttribute="centerX" secondItem="5wt-kM-waT" secondAttribute="centerX" id="PDL-iK-RH2"/>
+                            <constraint firstItem="vwf-8Z-BWg" firstAttribute="centerX" secondItem="5wt-kM-waT" secondAttribute="centerX" id="RYD-E0-Qe5"/>
+                            <constraint firstItem="aRM-zD-bGR" firstAttribute="top" secondItem="vwf-8Z-BWg" secondAttribute="bottom" constant="25" id="egb-B4-15f"/>
+                            <constraint firstItem="t41-ty-hZi" firstAttribute="top" secondItem="aRM-zD-bGR" secondAttribute="bottom" constant="70" id="jcV-5S-dzd"/>
+                            <constraint firstItem="aRM-zD-bGR" firstAttribute="leading" secondItem="5wt-kM-waT" secondAttribute="leadingMargin" id="sNr-IL-wtY"/>
+                            <constraint firstItem="ghE-Jn-I8h" firstAttribute="centerX" secondItem="5wt-kM-waT" secondAttribute="centerX" id="x5n-JE-KR7"/>
+                            <constraint firstItem="vwf-8Z-BWg" firstAttribute="top" secondItem="ghE-Jn-I8h" secondAttribute="bottom" constant="30" id="zFT-OF-dLD"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" tag="1" title="" image="settings" selectedImage="settings" id="Ljv-QV-jIj"/>
                     <nil key="simulatedTopBarMetrics"/>
+                    <connections>
+                        <outlet property="emailField" destination="aRM-zD-bGR" id="KeH-av-iIV"/>
+                        <outlet property="nameField" destination="vwf-8Z-BWg" id="sp9-eo-LvY"/>
+                        <outlet property="profileImageView" destination="ghE-Jn-I8h" id="ait-e5-tUR"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fI5-hm-ej6" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <tapGestureRecognizer id="BE7-09-5pK">
@@ -231,7 +325,7 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="1905" y="487"/>
+            <point key="canvasLocation" x="1904.8" y="486.20689655172418"/>
         </scene>
         <!--BoardVC-->
         <scene sceneID="WP8-CI-Xee">
@@ -1313,7 +1407,7 @@
                             <constraint firstAttribute="trailing" secondItem="b33-1k-2oO" secondAttribute="trailing" id="vu2-Oc-eRj"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" tag="3" title="" image="115FDB06-8254-4104-B0D3-6E5AA1DDC01C" selectedImage="115FDB06-8254-4104-B0D3-6E5AA1DDC01C" id="gLx-o3-RUD"/>
+                    <tabBarItem key="tabBarItem" tag="3" title="" image="04424F45-AFFF-4ADD-8699-1893181ABE65" selectedImage="04424F45-AFFF-4ADD-8699-1893181ABE65" id="gLx-o3-RUD"/>
                     <connections>
                         <outlet property="addBuddyButton" destination="iJF-ke-fPH" id="UJK-eK-Mdq"/>
                         <outlet property="eventView" destination="B1A-qM-9og" id="bj8-TX-igc"/>
@@ -1329,7 +1423,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="115FDB06-8254-4104-B0D3-6E5AA1DDC01C" width="24" height="24">
+        <image name="04424F45-AFFF-4ADD-8699-1893181ABE65" width="24" height="24">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPT5YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQrLjE3OlUkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
@@ -1432,7 +1526,7 @@ E0w
         <image name="user" width="18" height="18"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="9SE-j4-jUU"/>
-        <segue reference="mc4-0N-rHF"/>
+        <segue reference="4eT-tf-MhJ"/>
+        <segue reference="YIJ-Gs-lHu"/>
     </inferredMetricsTieBreakers>
 </document>
