--- a/Pluto/Base.lproj/LaunchScreen.storyboard
+++ b/Pluto/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -17,10 +20,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="k6g-Ba-biw">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rocket" translatesAutoresizingMaskIntoConstraints="NO" id="k6g-Ba-biw">
+                                <rect key="frame" x="137.5" y="278.5" width="100" height="110"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="240" id="24G-U9-ADV"/>
-                                    <constraint firstAttribute="height" constant="128" id="TfX-PN-zDt"/>
+                                    <constraint firstAttribute="width" constant="100" id="24G-U9-ADV"/>
+                                    <constraint firstAttribute="height" constant="110" id="TfX-PN-zDt"/>
                                 </constraints>
                             </imageView>
                         </subviews>
@@ -37,6 +41,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="logo" width="2000" height="1000"/>
+        <image name="rocket" width="879" height="879"/>
     </resources>
 </document>
